# iris

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Editor.md  HeapLang.md  LICENSE-CODE  Makefile  Makefile.coq.local  ProofGuide.md  ProofMode.md  README.md  StyleGuide.md  _CoqProject  build-all  coq-iris-deprecated.opam  coq-iris-heap-lang.opam  coq-iris-staging.opam  coq-iris.opam  make-package  opam
docs/: algebra.tex  editor.md  equalities.md  equalities_and_entailments.md  ghost-state.tex  heap_lang.md  iris.sty  iris.tex  language.tex  paradoxes.tex  program-logic.tex  proof_guide.md  proof_mode.md  resource_algebras.md  style_guide.md
iris/bi/: big_op.v  (+11 more)
iris_heap_lang/: adequacy.v  class_instances.v  derived_laws.v  lang.v  locations.v  primitive_laws.v  proofmode.v  proph_erasure.v  tactics.v
tests/: algebra.v  atomic.8.7.ref  atomic.8.8.ref  atomic.8.9.ref  atomic.ref  atomic.v  bi.v  heap_lang.ref  heap_lang.v  heap_lang2.ref  heap_lang2.v  heap_lang_proph.v  heapprop.v  ipm_paper.ref  ipm_paper.v  list_reverse.8.10.ref  list_reverse.ref  list_reverse.v  mosel_paper.v  one_shot.ref  one_shot.v  one_shot_once.ref  one_shot_once.v  proofmode.ref  proofmode.v  proofmode_ascii.8.11.ref  proofmode_ascii.ref  proofmode_ascii.v  proofmode_iris.ref  proofmode_iris.v  proofmode_monpred.8.11.ref  proofmode_monpred.ref  proofmode_monpred.v  proofmode_siprop.v  telescopes.ref  telescopes.v  tree_sum.v
tex/: Makefile  base-logic.tex  constructions.tex  derived.tex  extended-logic.tex  iris.sty  iris.tex  program-logic.tex  upload
theories/: options.v
(+289 files in other folders)
