opam-version: "2.0"
maintainer: "Ralf Jung <jung@mpi-sws.org>"
authors: "The Iris Team"
license: "BSD-3-Clause"
homepage: "https://iris-project.org/"
bug-reports: "https://gitlab.mpi-sws.org/iris/iris/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/iris.git"

synopsis: "Iris is a Higher-Order Concurrent Separation Logic Framework with support for interactive proofs"

depends: [
  "coq" { (>= "8.10.2" & < "8.13~") | (= "dev") }
  "coq-stdpp" { (= "dev.2020-10-15.0.c6e5d0be") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
